HTML e CSS para componente HOME

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<mat-card class="card">
+    <mat-card-header>
+      
+      <mat-card-title>Help Desk</mat-card-title>
+     
+    </mat-card-header>
+    <img mat-card-image src="assets/img/home2.svg" alt="Imagem Home">
+    <mat-card-content>
+      <p>
+       Olá ! Seja bem vindo ao sistema Help Desk desenvolvido por mim, para treinamento Full Stack.<br />
+       Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angulae 12
+       Spring Boot 2. <br />O sistema está rodando na nuvem sendo o front na Vercel e o back na Heroku. <br />
+       O projeto tem como objetido principal abordaqr os conceitos de aplicações SPAs, Autenticação e Autorização com 
+       Tokens JWT e muito mais. O código fonte do projeto pode ser acessado clicando no link Github no meu perfil.
+       <br /> <br /> Fique a vontade para testar o sistema e deixar seu sugestão.
+       <br /> At. te: Ericson Sérgio Costa Soares
+      </p>
+    </mat-card-content>
+   
+  </mat-card>
+  
