--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,15 +7,17 @@
 
         <mat-form-field class="form-field" appearance="fill">
           <mat-label>E-mail</mat-label>
-          <input matInput placeholder="Ex. fulano@mail.com" >
+          <input [formControl]="email" required [(ngModel)] = "credenciais.email" name="email" matInput placeholder="Ex. fulano@mail.com" >
         </mat-form-field>
  
         <mat-form-field class="form-field" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput placeholder="Ex. 123" >
+            <input [formControl]="senha" required [(ngModel)] = "credenciais.senha" name="senha" type="password" matInput placeholder="Ex. 123" >
           </mat-form-field>
 
-          <button class="full-width mat-elevation-z4" mat-stroked-button color="primary">Entrar</button>
+          <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Entrar</button>
           
+          {{ credenciais .email }}
+          {{ credenciais.senha }}
         </form>
 </div>
