--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,9 +15,8 @@
             <input [formControl]="senha" required [(ngModel)] = "credenciais.senha" name="senha" type="password" matInput placeholder="Ex. 123" >
           </mat-form-field>
 
-          <button [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Entrar</button>
+          <button (click)="logar()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Entrar</button>
           
-          {{ credenciais .email }}
-          {{ credenciais.senha }}
+        
         </form>
 </div>
