--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,25 @@
 <div class="container" >
     <form class="form mat-elevation-z8">
 
+      <form [formGroup]="form" class="form mat-elevation-z8" (ngSubmit)="logar()">
+
         <h1>Help Desk</h1>
 
         <img src="assets/img/login-shield.svg" alt="LOGIN">
 
         <mat-form-field class="form-field" appearance="fill">
           <mat-label>E-mail</mat-label>
-          <input [formControl]="email" required [(ngModel)] = "credenciais.email" name="email" matInput placeholder="Ex. fulano@mail.com" >
+          <input formControlName="email" required name="email" matInput placeholder="Ex. fulano@mail.com" >
         </mat-form-field>
  
         <mat-form-field class="form-field" appearance="fill">
             <mat-label>Senha</mat-label>
-            <input [formControl]="senha" required [(ngModel)] = "credenciais.senha" name="senha" type="password" matInput placeholder="Ex. 123" >
+            <input formControlName="senha" required name="senha" type="password" matInput placeholder="Ex. 123" >
           </mat-form-field>
 
           <button (click)="logar()" [disabled]="!validaCampos()" class="full-width mat-elevation-z4" mat-stroked-button color="primary">Entrar</button>
           
         
         </form>
+      </form>
 </div>
